# hx3d-framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO  build.py  clone_dependencies.sh  config.yml
engine/: CMakeLists.txt  EngineFiles.cmake
engine/assets/shaders/: base.frag.glsl  base.vert.glsl  base_border.frag.glsl  test.frag.glsl  test.vert.glsl  text.frag.glsl  text.vert.glsl
engine/implementations/dummy/window/: application.cpp  event_manager.cpp
engine/implementations/sdl2/audio/: music.cpp
engine/implementations/sdl2/window/: application.cpp  event_manager.cpp
engine/include/hx3d/: audio.hpp  ecs.hpp  graphics.hpp  gui.hpp  hx3d.hpp  math.hpp  net.hpp  physics_2d.hpp  tweens.hpp  utils.hpp  window.hpp
engine/include/hx3d/audio/: audio.hpp  display.hpp  effect.hpp  fft.hpp  i_music.hpp  music.hpp
engine/include/hx3d/core/: application.hpp  application_config.hpp  application_listener.hpp  configuration.hpp  core.hpp  events.hpp  game.hpp  game_object.hpp  input_handler.hpp  platforms.hpp  scene_graph.hpp  screen.hpp  screen_adapter.hpp
engine/include/hx3d/ecs/: component.hpp  e_node.hpp  e_scene_graph.hpp  engine.hpp  engine.inl  engine.inl.hpp  entity.hpp  entity_base.hpp  entity_engine.hpp  entity_system.hpp  game_object.hpp  game_object.inl  node.hpp  node_engine.hpp  node_system.hpp  object_engine.hpp  object_system.hpp  scene_graph.hpp  scene_graph.inl.hpp  system.hpp  system.inl  z_engine.hpp  z_graph.hpp  z_node.hpp  z_system.hpp
engine/include/hx3d/graphics/: animation.hpp  base_batch.hpp  batch.hpp  camera.hpp  color.hpp  error.hpp  fade_transition.hpp  fast_batch.hpp  font.hpp  frame_buffer.hpp  framebuffer.hpp  geometry.hpp  gl.hpp  image.hpp  mesh.hpp  multi_mesh.hpp  multi_sprite.hpp  ordered_batch.hpp  particle.hpp  particle_batch.hpp  particle_emitter.hpp  particle_manager.hpp  shader.hpp  shape.hpp  sprite.hpp  sprite_batch.hpp  stencil.hpp  text.hpp  texture.hpp  texture_atlas.hpp  texture_region.hpp  transform.hpp  transition.hpp  viewport.hpp
engine/include/hx3d/gui/: button.hpp  container.hpp  image_button.hpp  label.hpp  panel.hpp  placement.hpp  system.hpp  text.hpp  textbox.hpp  widget.hpp
engine/include/hx3d/math/: constants.hpp  function.hpp  interpolation.hpp  number_utils.hpp  random.hpp  vector_utils.hpp
engine/include/hx3d/net/: net.hpp
engine/include/hx3d/scripting/: repl.hpp  scripter.hpp  scripter_factory.hpp
engine/include/hx3d/tweens/: base_tween.hpp  callback.hpp  delay.hpp  parallel.hpp  sequence.hpp  sequence.inc.hpp  tween.hpp  tween_manager.hpp
engine/include/hx3d/utils/: algorithm.hpp  assets.hpp  benchmark.hpp  bitset.hpp  callback_timer.hpp  chronometer.hpp  file.hpp  log.hpp  matrix_queue.hpp  object_map.hpp  pool.hpp  poolable.hpp  property.hpp  ptr.hpp  reference.hpp  resource.hpp  string.hpp  timer.hpp  timer_manager.hpp  yaml.hpp
engine/include/hx3d/window/: application.hpp  application_config.hpp  application_listener.hpp  event_manager.hpp  events.hpp  game.hpp  i_application.hpp  i_event_manager.hpp  input_handler.hpp  input_multiplexer.hpp  screen.hpp
engine/src/audio/: audio.cpp  display.cpp  effect.cpp  fft.cpp  i_music.cpp  music.cpp
engine/src/audio/converters/: s16_converter.cpp
engine/src/audio/display/: spectrum.cpp  waveform.cpp
engine/src/core/: application.cpp  application_config.cpp  configuration.cpp  core.cpp  events.cpp  game.cpp  game_object.cpp  scene_graph.cpp  screen.cpp  screen_adapter.cpp
engine/src/ecs/: component.cpp  engine.cpp  entity.cpp  entity_base.cpp  game_object.cpp  node.cpp  scene_graph.cpp  system.cpp
engine/src/ecs/base/: id_base.cpp
engine/src/ecs/nodes/: physics_node.cpp  sprite_node.cpp
engine/src/graphics/: animation.cpp  base_batch.cpp  batch.cpp  camera.cpp  color.cpp  error.cpp  fade_transition.cpp  font.cpp  frame_buffer.cpp  framebuffer.cpp  geometry.cpp  image.cpp  mesh.cpp  multi_mesh.cpp  multi_sprite.cpp  ordered_batch.cpp  particle.cpp  particle_emitter.cpp  particle_manager.cpp  shader.cpp  shape.cpp  sprite.cpp  sprite_batch.cpp  stencil.cpp  text.cpp  texture.cpp  texture_atlas.cpp  texture_region.cpp  transform.cpp  transition.cpp  viewport.cpp
engine/src/graphics/batches/: batch.cpp  ordered_batch.cpp  simple_batch.cpp  simple_batch_2d.cpp
engine/src/graphics/buffers/: attribute.cpp  attribute_array_buffer.cpp  attribute_stream_buffer.cpp  index_array_buffer.cpp  multi_array_buffer.cpp
engine/src/graphics/cameras/: camera.cpp  (+2 more)
engine/src/gui/: button.cpp  container.cpp  label.cpp  panel.cpp  placement.cpp  system.cpp  text.cpp  textbox.cpp  widget.cpp
engine/src/math/: function.cpp  number_utils.cpp  random.cpp  vector_utils.cpp
engine/src/net/: net.cpp
engine/src/scripting/: repl.cpp  scripter.cpp  scripter_factory.cpp
engine/src/tweens/: base_tween.cpp  callback.cpp  delay.cpp  parallel.cpp  sequence.cpp  tween_manager.cpp
engine/src/utils/: benchmark.cpp  bitset.cpp  callback_timer.cpp  chronometer.cpp  file.cpp  log.cpp  matrix_queue.cpp  object_map.cpp  poolable.cpp  resource.cpp  string.cpp  timer.cpp  timer_manager.cpp  yaml.cpp
engine/src/window/: application.cpp  application_config.cpp  event_manager.cpp  events.cpp  game.cpp  i_application.cpp  i_event_manager.cpp  input_handler.cpp  input_multiplexer.cpp  screen.cpp
engine/tests/: log_test.cpp  main.cpp  scene_graph_tests.cpp
engine/tests/screens/: base_screen.hpp  screen_one.cpp  screen_three.cpp  screen_two.cpp
engine/tests/screens_tests/: menu_screen.cpp  menu_screen.hpp  screens_test.cpp  test_screen.hpp
tests/: CMakeLists.txt  GameFiles.cmake
tests/android/: AndroidManifest.xml  build.properties  build.xml  local.properties
tests/android/jni/: Android.mk  Application.mk  SDL_android_main.c  main.cpp
tests/assets/: config.yml
tests/assets/shaders/: custom2D.frag.glsl  custom2D.vert.glsl  fast2D.frag.glsl  fast2D.vert.glsl  light3D.frag.glsl  light3D.vert.glsl  pix2D.frag.glsl  pix2D.vert.glsl
tests/core/src/: test_game.cpp
tests/desktop/: main.cpp
tests/ios/: Info.plist
tests/ios/App.xcodeproj/: project.pbxproj
(+264 files in other folders)
